--- a/package.json
+++ b/package.json
@@ -5,13 +5,20 @@
   "dependencies": {
     "@testing-library/jest-dom": "^5.10.1",
     "@testing-library/react": "^8.0.1",
+    "@types/jest": "^29.2.1",
+    "@types/node": "^18.11.9",
+    "@types/react": "^18.0.24",
+    "@types/react-dom": "^18.0.8",
     "create-react-app": "^3.4.1",
     "h8k-components": "^1.0.0",
     "h8k-design": "^1.0.15",
+    "mobx": "^6.6.2",
+    "mobx-react": "^7.5.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "save": "^2.3.1"
+    "save": "^2.3.1",
+    "typescript": "^4.8.4"
   },
   "scripts": {
     "prestart": "npm install",
